// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputPassword should render as a password field 1`] = `
<DocumentFragment>
  <div
    class="css-1psxlcd"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        autocomplete="off"
        class="no-ligatures w-full border-none css-1nupw50"
        data-testid="InputPassword"
        type="password"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
      data-testid="Input__addon-end"
    >
      <div
        class=""
      >
        <button
          class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
          data-ring-focus-margin="-m-1"
          data-testid="InputPassword__toggle"
          type="button"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              eye.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InputPassword should render as a password isInvalid 1`] = `
<DocumentFragment>
  <div
    class="css-px3dod"
  >
    <div
      class="relative flex h-full flex-1"
    >
      <input
        aria-invalid="true"
        autocomplete="off"
        class="no-ligatures w-full border-none css-1nupw50"
        data-testid="InputPassword"
        name="test"
        type="password"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-danger-500"
      data-testid="Input__addon-end"
    >
      <span
        data-errortext="Error message for password"
        data-testid="Input__error"
      >
        <div
          class="text-theme-danger-500 css-1i4b0eq"
          height="20"
          width="20"
        >
          <svg>
            circle-exclamation-mark.svg
          </svg>
        </div>
      </span>
      <div
        class="pl-3"
      >
        <button
          class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
          data-ring-focus-margin="-m-1"
          data-testid="InputPassword__toggle"
          type="button"
        >
          <div
            class="css-1i4b0eq"
            height="20"
            width="20"
          >
            <svg>
              eye.svg
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
